# 3D-Viewer-System

./: .env.example  .gitignore  GIT_REPO_STRUCTURE_PLAN.md  README.md  environment.yml  index.html  pyproject.toml
assets/mock/: README.md
assets/page/: site.css
backend/app/: main.py
docs/: architecture.md  failure_cases.md  image_alternative_models.md  image_backends.md  image_recon_benchmark.md  image_upgrade_plan.md  object_selection.md  pipelines.md  quality_gate.md  repeatability.md  result_contract.md  runtime_issues.md  test_dataset.md  trellis2_runtime_lock.md  wonder3d_official_recovery.md
experiments/: README.md
frontend/: index.html  package-lock.json  package.json  prismscan-v2.html  vite.config.js
frontend/src/: api.js  main.js  router.js  style.css  viewer.js
pipelines/common/: context.py  env.py  external.py  io.py  mesh_convert.py  mesh_export.py  mock_assets.py  quality_gate.py  reliability.py  thumbnail.py
pipelines/image_to_3d/: cli.py  foreground_extract.py  foreground_extract_sam.py  foreground_extract_sam3.py  foreground_model_wrapper.py  hunyuan3d_wrapper.py  image_normalize.py  material_package.py  mesh_cleanup.py  mesh_optimize.py  multiview_generator.py  multiview_prior.py  multiview_wrapper.py  object_detection.py  pipeline.py  reconstruction.py  reconstruction_head.py  semantic_metadata.py  trellis_wrapper.py  viewer_environment.py
scripts/debug/: debug_rembg_runtime.py
scripts/dev/: no_cache_static.py  probe_sam3_cutout.sh  run_backend.sh  run_frontend.sh  run_image_stack.sh  (+7 more)
workers/: base_worker.py  image_worker.py
(+27 files in other folders)
