[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-3d-service"
version = "0.1.0"
description = "AI-based 3D creation MVP with separated backend, workers, and pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "numpy>=1.26.0",
  "Pillow>=10.4.0",
  "python-dotenv>=1.0.1",
  "trimesh>=4.4.9",
  "lxml>=5.2.0",
  "imageio>=2.36.0",
  "rembg>=2.0.67",
  "onnxruntime>=1.22.1,<2",
  "pyglet<2",
]

[tool.setuptools.packages.find]
include = ["backend*", "workers*", "pipelines*"]
